[package]
name = "html-auto-p"
version = "0.2.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/magiclen/html-auto-p"
homepage = "https://magiclen.org/html-auto-p"
keywords = ["html", "wpautop", "autop", "paragraph", "br"]
categories = ["text-processing"]
description = "This library provides a function like `wpautop` in Wordpress. It uses a group of regex replaces used to identify text formatted with newlines and replace double line-breaks with HTML paragraph tags."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
regex = "1"
once_cell = "1"
html-escape = "0.2"
trim-in-place = "0.1"
onig = { version = "6", optional = true, default-features = false }
